--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@mui/icons-material": "^7.1.1",
+    "@mui/lab": "^7.0.0-beta.13",
     "@mui/material": "^7.1.1",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.516.0",
     "react": "^19.1.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.1.0",
