--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/lodash": "^4.17.17",
+    "@types/node": "^24.0.8",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
